plugins/kotlin/idea/tests/testData/highlighterMetaInfo/NamedArguments.kt.highlighting
// FIR_IDENTICAL
<!HIGHLIGHTING("textAttributesKey='KOTLIN_ANNOTATION'")!>@Suppress<!>(<!HIGHLIGHTING("textAttributesKey='KOTLIN_ANNOTATION_ATTRIBUTE_NAME_ATTRIBUTES'")!>names =<!> ["foo"])
fun <!HIGHLIGHTING("textAttributesKey='KOTLIN_FUNCTION_DECLARATION'")!>foo<!>(<!HIGHLIGHTING("textAttributesKey='KOTLIN_PARAMETER'")!>p1<!>: <!HIGHLIGHTING("textAttributesKey='KOTLIN_CLASS'")!>Int<!>, <!HIGHLIGHTING("textAttributesKey='KOTLIN_PARAMETER'")!>p2<!>: <!HIGHLIGHTING("textAttributesKey='KOTLIN_CLASS'")!>String<!>): <!HIGHLIGHTING("textAttributesKey='KOTLIN_CLASS'")!>String<!> {
    return <!HIGHLIGHTING("textAttributesKey='KOTLIN_PARAMETER'")!>p2<!> + <!HIGHLIGHTING("textAttributesKey='KOTLIN_PARAMETER'")!>p1<!>
}

fun <!HIGHLIGHTING("textAttributesKey='KOTLIN_FUNCTION_DECLARATION'")!>bar<!>() {
    <!HIGHLIGHTING("textAttributesKey='KOTLIN_PACKAGE_FUNCTION_CALL'")!>foo<!>(1, <!HIGHLIGHTING("textAttributesKey='KOTLIN_NAMED_ARGUMENT'")!>p2 =<!> "")
}
